--- a/Src/tcpcamserver/tcpcamserver.vcxproj.filters
+++ b/Src/tcpcamserver/tcpcamserver.vcxproj.filters
@@ -2,18 +2,18 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="packetqueue.cpp" />
-    <ClCompile Include="tcpserver.cpp" />
-    <ClCompile Include="network.cpp" />
-    <ClCompile Include="session.cpp" />
-    <ClCompile Include="netlauncher.cpp" />
+    <ClCompile Include="..\netcom\udpserver.cpp" />
+    <ClCompile Include="..\netcom\netlauncher.cpp" />
+    <ClCompile Include="..\netcom\packetqueue.cpp" />
+    <ClCompile Include="..\netcom\udpclient.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="packetqueue.h" />
-    <ClInclude Include="tcpserver.h" />
-    <ClInclude Include="network.h" />
-    <ClInclude Include="session.h" />
-    <ClInclude Include="autocs.h" />
-    <ClInclude Include="netlauncher.h" />
+    <ClInclude Include="..\netcom\network.h" />
+    <ClInclude Include="..\netcom\tcpserver.h" />
+    <ClInclude Include="..\opencvcom\streaming.h" />
+    <ClInclude Include="..\netcom\udpserver.h" />
+    <ClInclude Include="..\netcom\netlauncher.h" />
+    <ClInclude Include="..\netcom\packetqueue.h" />
+    <ClInclude Include="..\netcom\udpclient.h" />
   </ItemGroup>
 </Project>
