--- a/Src/tcpchatclient/tcpchatclient.vcxproj
+++ b/Src/tcpchatclient/tcpchatclient.vcxproj
@@ -10,10 +10,13 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{28C8AC8D-98C4-4372-BA39-A02031D5633E}</ProjectGuid>
+    <ProjectGuid>{4AE95635-BE91-49C1-BD5E-0BC6B24CA9ED}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>tcpcamserver</RootNamespace>
+    <RootNamespace>tcpchatclient</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -77,22 +80,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\netcom\netlauncher.cpp" />
-    <ClCompile Include="..\netcom\packetqueue.cpp" />
-    <ClCompile Include="..\netcom\udpclient.cpp" />
-    <ClCompile Include="..\netcom\udpserver.cpp" />
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\netcom\netlauncher.h" />
-    <ClInclude Include="..\netcom\network.h" />
-    <ClInclude Include="..\netcom\packetqueue.h" />
-    <ClInclude Include="..\netcom\tcpserver.h" />
-    <ClInclude Include="..\netcom\udpclient.h" />
-    <ClInclude Include="..\netcom\udpserver.h" />
-    <ClInclude Include="..\opencvcom\streaming.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
